// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`follow-imports-custom BooleanEditor 1`] = `
Object {
  "exportedAs": "BooleanEditor",
  "filePath": "/Users/atanasster/component-controls/ui/editors/src/BooleanEditor/BooleanEditor.tsx",
  "from": "./BooleanEditor",
  "importedName": "BooleanEditor",
  "loc": Object {
    "end": Object {
      "column": 18,
      "line": 21,
    },
    "start": Object {
      "column": 2,
      "line": 15,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/ui/editors/src/BooleanEditor/BooleanEditor.tsx",
  "source": undefined,
}
`;

exports[`follow-imports-custom Markdown 1`] = `
Object {
  "exportedAs": "Markdown",
  "filePath": "/Users/atanasster/component-controls/ui/components/src/Markdown/Markdown.tsx",
  "from": "./Markdown",
  "importedName": "Markdown",
  "loc": Object {
    "end": Object {
      "column": 18,
      "line": 33,
    },
    "start": Object {
      "column": 2,
      "line": 26,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/ui/components/src/Markdown/Markdown.tsx",
  "source": undefined,
}
`;

exports[`follow-imports-custom Title 1`] = `
Object {
  "exportedAs": "Title",
  "filePath": "/Users/atanasster/component-controls/ui/blocks/src/Title/Title.tsx",
  "from": "./",
  "importedName": "Title",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 23,
    },
    "start": Object {
      "column": 64,
      "line": 10,
    },
  },
  "originalFilePath": "/Users/atanasster/component-controls/ui/blocks/src/Title/Title.tsx",
  "source": undefined,
}
`;
